# rgui

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  flake.nix  rustfmt.toml
src/: main.rs  ui.rs
