[package]
name = "rgui"
version = "0.3.1"
license = "0BSD"
edition = "2021"
publish = false

[dependencies]
argh = { version = "0.1.12", default-features = false }
crossbeam-channel = { version = "0.5.8", default-features = false, features = ["std"] }
crossterm = { version = "0.27.0", default-features = false, features = ["events", "windows"] }
eyre = { version = "0.6.10", default-features = false, features = ["auto-install", "track-caller"] }
grep = { version = "0.3.1", default-features = false }
ignore = { version = "0.4.21", default-features = false }
parking_lot = { version = "0.12.1", default-features = false }
ratatui = { version = "0.24.0", default-features = false, features = ["crossterm"] }
regex = { version = "1.10.2", default-features = false }
unicode-width = { version = "0.1.11", default-features = false }
