[package]
name = "rgui"
version = "0.4.0"
license = "0BSD"
edition = "2024"
publish = false

[dependencies]
argh = { version = "0.1.13", default-features = false }
crossbeam-channel = { version = "0.5.15", default-features = false, features = ["std"] }
crossterm = { version = "0.29.0", default-features = false, features = ["bracketed-paste", "events", "windows"] }
eyre = { version = "0.6.12", default-features = false, features = ["auto-install", "track-caller"] }
grep = { version = "0.4.1", default-features = false }
ignore = { version = "0.4.25", default-features = false }
parking_lot = { version = "0.12.5", default-features = false }
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
regex = { version = "1.12.2", default-features = false }
unicode-width = { version = "0.2.2", default-features = false }
